# pqmagic-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: PQMagicWrapperConfig.cmake.in
doc/: API.md  API_cn.md
examples/: CMakeLists.txt  example_kem.c  example_sig.c
include/: pqmagic_wrapper.h
src/: common.c  pqmagic_wrapper.c
src/kem/: kem.c
src/kem/aigis_enc/: kem_aigis_enc.h  kem_aigis_enc_1.c  kem_aigis_enc_2.c  kem_aigis_enc_3.c  kem_aigis_enc_4.c
src/kem/kyber/: kem_kyber.h  kem_kyber_1024.c  kem_kyber_512.c  kem_kyber_768.c
src/kem/ml_kem/: kem_ml_kem.h  kem_ml_kem_1024.c  kem_ml_kem_512.c  kem_ml_kem_768.c
src/sig/: sig.c
src/sig/aigis_sig/: sig_aigis_sig.h  sig_aigis_sig_1.c  sig_aigis_sig_2.c  sig_aigis_sig_3.c
src/sig/dilithium/: sig_dilithium.h  sig_dilithium_2.c  sig_dilithium_3.c  sig_dilithium_5.c
src/sig/ml_dsa/: sig_ml_dsa.h  sig_ml_dsa_44.c  sig_ml_dsa_65.c  sig_ml_dsa_87.c
src/sig/slh_dsa/: sig_slh_dsa.h  sig_slh_dsa_sha2_128f.c  sig_slh_dsa_sha2_128s.c  sig_slh_dsa_sha2_192f.c  sig_slh_dsa_sha2_192s.c  sig_slh_dsa_sha2_256f.c  sig_slh_dsa_sha2_256s.c  sig_slh_dsa_shake_128f.c  sig_slh_dsa_shake_128s.c  sig_slh_dsa_shake_192f.c  sig_slh_dsa_shake_192s.c  sig_slh_dsa_shake_256f.c  sig_slh_dsa_shake_256s.c  sig_slh_dsa_sm3_128f.c  sig_slh_dsa_sm3_128s.c
src/sig/sphincs_alpha/: sig_sphincs_a_sha2_128f.c  sig_sphincs_a_sha2_128s.c  sig_sphincs_a_sha2_192f.c  sig_sphincs_a_sha2_192s.c  sig_sphincs_a_sha2_256f.c  sig_sphincs_a_sha2_256s.c  sig_sphincs_a_shake_128f.c  sig_sphincs_a_shake_128s.c  sig_sphincs_a_shake_192f.c  sig_sphincs_a_shake_192s.c  sig_sphincs_a_shake_256f.c  sig_sphincs_a_shake_256s.c  sig_sphincs_a_sm3_128f.c  sig_sphincs_a_sm3_128s.c  sig_sphincs_alpha.h
tests/: test_common.c  test_framework.h  test_kem.c  test_main.c  test_sig.c
